--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
     "lucide-react": "^0.340.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
