--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/html": "^2.2.2",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "lucide-react": "^0.340.0",
