--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/html": "^2.2.2",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "lucide-react": "^0.340.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
